--- a/EnergiNorge.ipynb
+++ b/EnergiNorge.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "seasonal-lancaster",
+   "id": "demonstrated-lease",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "residential-appeal",
+   "id": "iraqi-aquarium",
    "metadata": {},
    "source": [
     "### Functions to pre-process data"
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "signal-tuesday",
+   "id": "russian-makeup",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "unauthorized-mexican",
+   "id": "geographic-jones",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "spread-upset",
+   "id": "physical-fruit",
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "dried-chile",
+   "id": "received-motel",
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "latest-sound",
+   "id": "pregnant-tablet",
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "matched-colorado",
+   "id": "nearby-ordinary",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "beginning-mountain",
+   "id": "official-static",
    "metadata": {
     "scrolled": true
    },
@@ -250,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "controversial-remark",
+   "id": "linear-surprise",
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "mounted-chemical",
+   "id": "included-mumbai",
    "metadata": {},
    "outputs": [
     {
@@ -419,10 +419,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "residential-proxy",
+   "execution_count": 12,
+   "id": "southern-mistress",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  1.   1.   1. ... 211. 211. 211.]\n"
+     ]
+    }
+   ],
    "source": [
     "time_start = time_since_start(new_data2)\n",
     "print(time_start)"
@@ -430,8 +438,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "mature-filing",
+   "execution_count": 13,
+   "id": "lasting-keyboard",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,20 +448,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "grand-marketing",
+   "execution_count": 14,
+   "id": "official-jacob",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count    1.874087e+06\n",
+      "mean     1.668366e+02\n",
+      "std      8.689492e+01\n",
+      "min      0.000000e+00\n",
+      "25%      1.880000e+02\n",
+      "50%      2.120000e+02\n",
+      "75%      2.150000e+02\n",
+      "max      2.450000e+02\n",
+      "Name: time_start, dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
     "print(new_data2['time_start'].describe())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "understanding-satisfaction",
+   "execution_count": 15,
+   "id": "ceramic-passing",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count    5428.000000\n",
+      "mean      104.347089\n",
+      "std        61.082445\n",
+      "min         0.000000\n",
+      "25%        52.000000\n",
+      "50%       104.000000\n",
+      "75%       156.000000\n",
+      "max       245.000000\n",
+      "Name: time_start, dtype: float64\n",
+      "count    1.868659e+06\n",
+      "mean     1.670181e+02\n",
+      "std      8.689332e+01\n",
+      "min      1.000000e+00\n",
+      "25%      1.880000e+02\n",
+      "50%      2.120000e+02\n",
+      "75%      2.150000e+02\n",
+      "max      2.450000e+02\n",
+      "Name: time_start, dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
     "print(new_data2.loc[new_data2['mode'] == 'start' , 'time_start'].describe())\n",
     "print(new_data2.loc[new_data2['mode'] == 'operation' , 'time_start'].describe())"
@@ -462,7 +511,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "wooden-recipient",
+   "id": "moved-colombia",
    "metadata": {},
    "outputs": [],
    "source": []
