--- a/EnergiNorge.ipynb
+++ b/EnergiNorge.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "demonstrated-lease",
+   "id": "cognitive-international",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "iraqi-aquarium",
+   "id": "fantastic-column",
    "metadata": {},
    "source": [
     "### Functions to pre-process data"
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "russian-makeup",
+   "id": "novel-aquarium",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,8 +50,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "id": "unique-orientation",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def time_since_operation(df):\n",
+    "    time_op = np.zeros(len(df))\n",
+    "    for i in range(len(df)):\n",
+    "        if i ==0 :\n",
+    "            time_op [i] =1\n",
+    "            \n",
+    "        else:\n",
+    "            if (df['mode'][i] == 'operation'):\n",
+    "                time_op [i] = time_op[i-1]+ df['time_difference'][i]\n",
+    "                                \n",
+    "            elif (df['mode'][i] == 'start'):\n",
+    "                time_op[i] = 0\n",
+    "                \n",
+    "    return time_op"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
-   "id": "geographic-jones",
+   "id": "worth-working",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "physical-fruit",
+   "id": "incorrect-partnership",
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "received-motel",
+   "id": "consistent-implementation",
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "pregnant-tablet",
+   "id": "maritime-armstrong",
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "nearby-ordinary",
+   "id": "following-breeding",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "official-static",
+   "id": "handy-combining",
    "metadata": {
     "scrolled": true
    },
@@ -250,7 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "linear-surprise",
+   "id": "clean-virtue",
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "included-mumbai",
+   "id": "accessible-winner",
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "southern-mistress",
+   "id": "individual-hampshire",
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "lasting-keyboard",
+   "id": "intended-boards",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "official-jacob",
+   "id": "executed-starter",
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "ceramic-passing",
+   "id": "introductory-victim",
    "metadata": {},
    "outputs": [
     {
@@ -510,8 +533,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "id": "wired-christmas",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_data2.insert(0, 'time_op', time_since_operation(new_data2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "amino-heating",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count    1.874087e+06\n",
+      "mean     1.071418e+05\n",
+      "std      1.030655e+05\n",
+      "min      0.000000e+00\n",
+      "25%      2.134600e+04\n",
+      "50%      6.686100e+04\n",
+      "75%      1.767420e+05\n",
+      "max      3.965860e+05\n",
+      "Name: time_op, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(new_data2['time_op'].describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "moved-colombia",
+   "id": "studied-exhibition",
    "metadata": {},
    "outputs": [],
    "source": []
